kubernetes/14.5/manifests/00-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-example
  labels:
    role: ns-example
