kubernetes/14.5/manifests/01-security-context.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
  namespace: ns-example
spec:
  restartPolicy: Never
  containers:
  - name: sec-ctx-demo
    image: busybox
    command: ["id"]
    securityContext:
      runAsUser: 1000
      runAsGroup: 3000
